--- a/lib/netfw-sys/Cargo.toml
+++ b/lib/netfw-sys/Cargo.toml
@@ -7,5 +7,5 @@ license = "MIT/Apache-2.0"
 
 [dependencies]
 bitflags = "1.2.1"
-com = { git = "https://github.com/microsoft/com-rs", rev = "3693ab2" }
+com = "0.4.0"
 winapi = "0.3.9"
