--- a/deny.toml
+++ b/deny.toml
@@ -72,4 +72,6 @@ deny = [
 unknown-registry = "deny"
 unknown-git = "deny"
 allow-registry = [ "https://github.com/rust-lang/crates.io-index" ]
-allow-git = []
+allow-git = [
+    "https://github.com/adumbidiot/skylight-rs",
+]
