--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,13 +3,13 @@ name = "netfw"
 version = "0.0.0"
 authors = [ "adumbidiot <nathaniel.daniel23@outlook.com>" ]
 edition = "2018"
-license = "MIT/Apache-2.0"
+license = "MIT OR Apache-2.0"
 
 [dependencies]
 bitflags = "1.2.1"
 com = "0.4.0"
 netfw-sys = { path = "./lib/netfw-sys" }
-skylight = { git = "https://github.com/adumbidiot/skylight-rs", rev = "75f96917ab8d4851fa80f1c225faf551bfa3347a", features = [ "oleauto" ] }
+skylight = { git = "https://github.com/adumbidiot/skylight-rs", features = [ "objbase", "oleauto" ] }
 winapi = { version = "0.3.9", features = [ "oaidl", "objbase", "oleauto" ] }
 
 [dev-dependencies]
